--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "author": "claudneysessa <claudneysartisessa@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "typescript": "^4.8.4"
   },
   "devDependencies": {
+    "@types/express": "^4.17.14",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
     "eslint": "^8.26.0",
