--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ignite-trilha-nodejs-Chapter02-criando-api-com-nodejs",
+  "name": "api_com_nodejs",
   "version": "1.0.0",
   "description": "Trilha NodeJS - Criando a API com NodeJS",
   "main": "index.js",
@@ -7,8 +7,7 @@
   "author": "claudneysessa <claudneysartisessa@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "typescript": "^4.8.4"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
@@ -21,6 +20,7 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-import-helpers": "^1.3.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "typescript": "^4.8.4"
   }
 }
