--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "author": "claudneysessa <claudneysartisessa@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
