--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "repository": "https://github.com/claudneysessa/ignite-trilha-nodejs-Chapter02-criando-api-com-nodejs.git",
   "author": "claudneysessa <claudneysartisessa@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts"
+  },
   "dependencies": {
-    "express": "^4.18.2",
-    "ts-node": "^10.9.1"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
@@ -22,6 +24,8 @@
     "eslint-plugin-import-helpers": "^1.3.0",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.7.1",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
   }
 }
