--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "claudneysessa <claudneysartisessa@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts"
+    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules --respawn src/server.ts"
   },
   "dependencies": {
     "express": "^4.18.2"
