Incluindo Regras de Validação para Inclusão de Categorias utilizando middleware

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
+    "workbench.iconTheme": "material-icon-theme",
+    "workbench.colorTheme": "Omni",
     "editor.codeActionsOnSave": {
         "source.fixAll.eslint": true
     }
