--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,6 +11,39 @@
             "outFiles": [
                 "${workspaceFolder}/**/*.js"
             ]
+        },
+        {
+            "name": "Start and Debugger",
+            "type": "node",
+            "request": "launch",
+            "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/ts-node-dev",
+            "program": "${workspaceFolder}/src/server.ts",
+            "console": "integratedTerminal",
+            "internalConsoleOptions": "neverOpen",
+            "autoAttachChildProcesses": true,
+            "restart": true,
+            "sourceMaps": true,
+            "smartStep": true,
+            "trace": true,
+            "showAsyncStacks": true,
+            "timeout": 30000,
+            "protocol": "inspector",
+            "traceResponse": true,
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "outFiles": [
+                "${workspaceFolder}/**/*.js"
+            ],
+            "env": {
+                "NODE_ENV": "development"
+            },
+            "sourceMapPathOverrides": {
+                "webpack:///./*": "${workspaceFolder}/*",
+                "webpack:///src/*": "${workspaceFolder}/src/*",
+                "webpack:///*": "*",
+                "webpack:///./~/*": "${workspaceFolder}/node_modules/*"
+            }
         }
     ]
 }
