Ajustando o lauch.json para novo perfil de start e debugger

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,7 @@
             ]
         },
         {
-            "name": "Start and Debugger",
+            "name": "Start Server and Debugger",
             "type": "node",
             "request": "launch",
             "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/ts-node-dev",
