--- a/package.json
+++ b/package.json
@@ -7,15 +7,28 @@
   "author": "claudneysessa <claudneysartisessa@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts"
+    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts",
+    "doc": "node dist/swagger.js"
   },
   "dependencies": {
+    "@types/swagger-schema-official": "^2.0.22",
     "@types/uuid": "^8.3.4",
     "express": "^4.18.2",
+    "swagger-autogen": "^2.22.0",
+    "swagger-jsdoc": "^6.2.5",
+    "swagger-schema-official": "^2.0.0-bab6bed",
+    "swagger-ui-express": "^4.5.0",
+    "swagger2openapi": "^7.0.8",
+    "tsc": "^2.0.4",
     "uuid": "^9.0.0"
+  },
+  "bin": {
+    "swagger-typescript-api": "src/server.js",
+    "sta": "src/index.js"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
     "eslint": "^8.26.0",
