--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "doc": "node dist/swagger.js"
   },
   "dependencies": {
+    "@types/csv-parse": "^1.2.2",
+    "@types/multer": "^1.4.7",
     "@types/swagger-schema-official": "^2.0.22",
     "@types/uuid": "^8.3.4",
+    "csv-parse": "^5.3.1",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "swagger-autogen": "^2.22.0",
     "swagger-jsdoc": "^6.2.5",
     "swagger-schema-official": "^2.0.0-bab6bed",
